# embedded-rust-gpio

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
